--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="article-entry" itemprop="articleBody">
       
         <p>BattleBlocks is online PK game,Player one to one in game.</p>
-<img src="/imgs/blocks_icon.png">
+<img src="/imgs/blocks_Icon.png">
 <p>Play with friends! Play with Legends. Play the game on your mobile and become the best!</p>
 <p>COMPETE 1-ON-1  TOURNAMENTS</p>
 <p>Refine your skills in the practice arena, take on the world in 1-vs-1 matches, or enter tournaments to win trophies and exclusive cues!</p>
