--- a/docs2/ys.html
+++ b/docs2/ys.html
@@ -10,9 +10,9 @@
   一个小秘密隐私政策
   <br>
   <br>
-  更新日期：2020年1月21日
+  更新日期：2020年7月20日
   <br>
-  生效日期：2020年1月21日
+  生效日期：2020年7月20日
   </h4>
   <h5>
   本隐私政策将帮助你了解：
@@ -328,8 +328,12 @@
 </p><p> 
   随着我们业务的持续发展，我们将有可能进行合并、收购、资产转让，你的个人信息有可能因此而被转移。在发生前述变更时，我们将按照法律法规及不低于本隐私政策所要求的安全标准继续保护或要求个人信息的继受方继续保护你的个人信息，否则我们将要求继受方重新征得你的授权同意。
 </p><p> 
-  （二）个人信息的公开披露
-</p><p> 
+  （二）个人信息的公开与披露
+</p>
+  <p>
+    为了向您提供一键分享服务，我们的产品集成友盟+ U-Share SDK，将收集您的设备标识信息（如IMEI/android ID/IDFA等）和您需要分享的社交账户公开信息，以便完成一键分享服务。为了您的信息安全，我们已与第三方SDK服务商进行数据安全保密约定，这些公司会严格遵守我们的数据隐私和安全要求。除非得到您的同意，我们不会与其共享您的个人身份信息。为便于您更好地了解【友盟+】采集的数据类型及用途，以及何保护您的个人信息，您可以登陆https://www.umeng.com/policy了解【友盟+】隐私权政策。
+  </p>
+  <p> 
   除对违规账号、欺诈行为进行处罚公告时，我们会披露相关账号的必要信息外，我们不会公开披露你的信息，除非遵循国家法律法规规定或者获得你的同意。我们公开披露你的个人信息会采用符合行业内标准的安全保护措施。
 </p><p> 
   （三）依法豁免征得同意共享、转让、公开披露的个人信息
