--- a/docs2/ys.html
+++ b/docs2/ys.html
@@ -234,7 +234,12 @@
   四、我们如何共享、转让、公开披露个人信息
 </p><p> 
   （一）个人信息的共享、转让
-</p><p> 
+</p>
+  <p>
+  为了向您提供一键分享服务，我们的产品集成友盟+ U-Share SDK，将收集您的设备标识信息（如IMEI/android ID/IDFA等）和您需要分享的社交账户公开信息，以便完成一键分享服务。为了您的信息安全，我们已与第三方SDK服务商进行数据安全保密约定，这些公司会严格遵守我们的数据隐私和安全要求。除非得到您的同意，我们不会与其共享您的个人身份信息。为便于您更好地了解【友盟+】采集的数据类型及用途，以及何保护您的个人信息，您可以登陆<a href='https://www.umeng.com/policy'>https://www.umeng.com/policy</a>了解【友盟+】隐私权政策。
+  </p>
+  
+  <p> 
   我们不会向第三方共享、转让你的个人信息，除非经过你本人事先授权同意，或者共享、转让的个人信息是去标识化处理后的信息，且共享第三方无法重新识别此类信息的自然人主体。
 </p><p> 
   1.在下列情况下，我们可能会共享的个人信息
@@ -259,7 +264,7 @@
 </p><p> 
   友盟（umeng）
 </p><p> 
-  使用目的：集成分享SDK与推送消息
+  使用目的：集成第三方登录分享SDK与推送消息
 </p><p> 
   官网链接：https://www.umeng.com
 </p><p> 
