--- a/docs2/ys.html
+++ b/docs2/ys.html
@@ -125,7 +125,7 @@
   (1) 你在广场、私聊中发布图片、音视频等内容时，我们会请求你授权相机、照片、麦克风等敏感权限。如果拒绝提供授权，你将无法使用此功能，但不影响你正常使用一个小秘密的其他功能。
 </p>
 <p>
-  （2）当你发布内容时选择添加地理位置信息、主动分享自己的定位、以及使用恋爱铃功能时并选择显示位置时，我们会请求你授权地理位置这一敏感权限，并收集与本服务相关的位置信息，这些技术包括IP地址、GPS等传感器技术。你如果拒绝授权提供，将无法使用此功能，但不影响你正常使用一个小秘密的其他功能。
+  （2）当你发布内容时选择添加地理位置信息、主动分享自己的定位时并选择显示位置时，我们会请求你授权地理位置这一敏感权限，并收集与本服务相关的位置信息，这些技术包括IP地址、GPS等传感器技术。你如果拒绝授权提供，将无法使用此功能，但不影响你正常使用一个小秘密的其他功能。
 </p>
 <p>
   5.为你提供互动功能或服务
@@ -235,10 +235,7 @@
 </p><p> 
   （一）个人信息的共享、转让
 </p>
-  <p>
-  为了向您提供一键分享服务，我们的产品集成友盟+ U-Share SDK，将收集您的设备标识信息（如IMEI/android ID/IDFA等）和您需要分享的社交账户公开信息，以便完成一键分享服务。为了您的信息安全，我们已与第三方SDK服务商进行数据安全保密约定，这些公司会严格遵守我们的数据隐私和安全要求。除非得到您的同意，我们不会与其共享您的个人身份信息。为便于您更好地了解【友盟+】采集的数据类型及用途，以及何保护您的个人信息，您可以登陆<a href='https://www.umeng.com/policy'>https://www.umeng.com/policy</a>了解【友盟+】隐私权政策。
-  </p>
-  
+ 
   <p> 
   我们不会向第三方共享、转让你的个人信息，除非经过你本人事先授权同意，或者共享、转让的个人信息是去标识化处理后的信息，且共享第三方无法重新识别此类信息的自然人主体。
 </p><p> 
@@ -246,7 +243,7 @@
 </p><p> 
   （1）为实现特定功能而与业务合作伙伴共享
 </p><p> 
-  为保障“一个小秘密”相关功能的实现与应用安全稳定的运行，我们可能会接入由第三方提供的软件开发包（SDK）实现相关目的。这可能会收集你的位置信息及相关设备信息（例如硬件型号、操作系统版本号、国际移动设备身份识别码（IMEI）、网络设备硬件地址（MAC））经过去标识化后并提供给前述提供商。你可以拒绝提供此类信息，但不影响你使用其他服务。
+  为保障“一个小秘密”相关功能的实现与应用安全稳定的运行，我们可能会接入由第三方提供的软件开发包（SDK）实现相关目的。这可能会收集你的位置信息及相关设备信息（例如硬件型号、操作系统版本号、国际移动设备身份识别码（IMEI）、网络设备硬件地址（MAC））。经过去标识化后并提供给前述提供商。你可以拒绝提供此类信息，但不影响你使用其他服务。
 </p><p> 
   我们接入的相关第三方SDK的目录如下。
 </p><p> 
@@ -261,10 +258,21 @@
   使用目的：广告
 </p><p> 
   官网链接：https://apt.qq.com
-</p><p> 
+</p>
+ <p> 
+  UShare SDK
+</p>
+  <p style="color:red">
+   注意：此SDK需要分享的社交账户公开信息为了您的信息安全，我们已与第三方SDK服务商进行数据安全保密约定， 这些公司会严格遵守我们的数据隐私和安全要求。除非得到您的同意，我们不会与其共享您的个人身份信息。
+    为便于您更好地了解【友盟+】采集的数据类型及用途，以及何保护您的个人信息，您可以登陆<a href='https://www.umeng.com/policy'>https://www.umeng.com/policy</a>了解【友盟+】隐私权政策。
+   </p>
+  <p> 
+  使用目的： 提供第三方社交平台登录或分享服务，以便完成分享或登录服务。
+</p>
+  <p> 
   友盟（umeng）
 </p><p> 
-  使用目的：集成第三方登录分享SDK与推送消息
+  使用目的：推送消息
 </p><p> 
   官网链接：https://www.umeng.com
 </p><p> 
