--- a/docs2/ys.html
+++ b/docs2/ys.html
@@ -263,7 +263,7 @@
   UShare SDK
 </p>
   <p style="color:red">
-   注意：此SDK需要分享的社交账户公开信息为了您的信息安全，我们已与第三方SDK服务商进行数据安全保密约定， 这些公司会严格遵守我们的数据隐私和安全要求。除非得到您的同意，我们不会与其共享您的个人身份信息。
+   注意：为了第三方社交账户登录或分享功能的正常运行可以需要分享的社交账户公开信息，为了您的信息安全，我们已与第三方SDK服务商进行数据安全保密约定， 这些公司会严格遵守我们的数据隐私和安全要求。除非得到您的同意，我们不会与其共享您的个人身份信息。
     为便于您更好地了解【友盟+】采集的数据类型及用途，以及何保护您的个人信息，您可以登陆<a href='https://www.umeng.com/policy'>https://www.umeng.com/policy</a>了解【友盟+】隐私权政策。
    </p>
   <p> 
