--- a/docs2/pwxy.html
+++ b/docs2/pwxy.html
@@ -25,7 +25,7 @@
         <LI><P ALIGN=LEFT STYLE="margin-top: 0.17in; margin-bottom: 0in; line-height: 0.31in; widows: 2; orphans: 2">
                 <FONT ><SPAN LANG="zh-CN"><FONT COLOR="#FF0000"><FONT ><FONT SIZE=3>什么是陪玩？</FONT></FONT></FONT></SPAN> </FONT></P>
                 <br>
-                <FONT ><SPAN LANG="zh-CN"><FONT COLOR="#000000"><FONT ><FONT SIZE=3>陪玩是作者和您一起玩游戏，一起聊天等。</FONT></FONT></FONT></SPAN></FONT></P>
+                <FONT ><SPAN LANG="zh-CN"><FONT COLOR="#000000"><FONT ><FONT SIZE=3>陪玩是作者和您一起玩游戏。</FONT></FONT></FONT></SPAN></FONT></P>
         </LI> 
 
         <LI><P ALIGN=LEFT STYLE="margin-top: 0.17in; margin-bottom: 0in; line-height: 0.31in; widows: 2; orphans: 2">
